# soaring-ctrw

./: .gitignore  README.md  pyproject.toml
configs/: hang_gliders.yaml  paragliders.yaml  sailplanes.yaml
docs/: model.md
paper/: paper.tex  paperNotes.bib  paper_prl.tex  references.bib
paper/figures/: local_slope_diagnostic.npz
scripts/: compare_to_empirical.py  diagnose_local_slope.py  plot_all_aircraft.py  plot_final_calibrated.py  run_simulation.py  scan_phase_diagram.py
src/soaring_ctrw/: __init__.py  distributions.py  model.py  observables.py  simulation.py
tests/: test_distributions.py  test_model.py  test_observables.py
